--- a/index.html
+++ b/index.html
@@ -1,9 +1,259 @@
-<html><title>ample Website </title>
+<HTML>
+<HEAD>
+<TITLE>Your Company Name</TITLE>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<!-- ImageReady Preload Script (index.psd) -->
+<SCRIPT TYPE="text/javascript">
+<!--
 
-<body>
+function newImage(arg) {
+	if (document.images) {
+		rslt = new Image();
+		rslt.src = arg;
+		return rslt;
+	}
+}
 
-	Hello World
+function changeImages() {
+	if (document.images && (preloadFlag == true)) {
+		for (var i=0; i<changeImages.arguments.length; i+=2) {
+			document[changeImages.arguments[i]].src = changeImages.arguments[i+1];
+		}
+	}
+}
 
-</body>
+var preloadFlag = false;
+function preloadImages() {
+	if (document.images) {
+		home_over = newImage("images/home-over.gif");
+		products_over = newImage("images/products-over.gif");
+		news_over = newImage("images/news-over.gif");
+		careers_over = newImage("images/careers-over.gif");
+		contact_over = newImage("images/contact-over.gif");
+		preloadFlag = true;
+	}
+}
 
-</html>
+// -->
+</SCRIPT>
+<!-- End Preload Script -->
+</HEAD>
+<link href="css/styles.css" rel="stylesheet" type="text/css">
+<BODY BGCOLOR=#FFFFFF LEFTMARGIN=0 TOPMARGIN=0 MARGINWIDTH=0 MARGINHEIGHT=0 ONLOAD="preloadImages();"><center>
+
+<!-- ImageReady Slices (index.psd) -->
+<TABLE WIDTH=775 BORDER=0 CELLPADDING=0 CELLSPACING=0>
+	<TR>
+		<TD COLSPAN=16>
+			<IMG SRC="images/title.gif" WIDTH=775 HEIGHT=80 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=80 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=2>
+			<IMG SRC="images/menul.gif" WIDTH=45 HEIGHT=32 ALT=""></TD>
+		<TD>
+			<A HREF="#"
+				ONMOUSEOVER="changeImages('home', 'images/home-over.gif'); return true;"
+				ONMOUSEOUT="changeImages('home', 'images/home.gif'); return true;">
+				<IMG NAME="home" SRC="images/home.gif" WIDTH=132 HEIGHT=32 BORDER=0 ALT=""></A></TD>
+		<TD COLSPAN=4>
+			<A HREF="#"
+				ONMOUSEOVER="changeImages('products', 'images/products-over.gif'); return true;"
+				ONMOUSEOUT="changeImages('products', 'images/products.gif'); return true;">
+				<IMG NAME="products" SRC="images/products.gif" WIDTH=136 HEIGHT=32 BORDER=0 ALT=""></A></TD>
+		<TD COLSPAN=2>
+			<A HREF="#"
+				ONMOUSEOVER="changeImages('news', 'images/news-over.gif'); return true;"
+				ONMOUSEOUT="changeImages('news', 'images/news.gif'); return true;">
+				<IMG NAME="news" SRC="images/news.gif" WIDTH=136 HEIGHT=32 BORDER=0 ALT=""></A></TD>
+		<TD COLSPAN=3>
+			<A HREF="#"
+				ONMOUSEOVER="changeImages('careers', 'images/careers-over.gif'); return true;"
+				ONMOUSEOUT="changeImages('careers', 'images/careers.gif'); return true;">
+				<IMG NAME="careers" SRC="images/careers.gif" WIDTH=136 HEIGHT=32 BORDER=0 ALT=""></A></TD>
+		<TD>
+			<A HREF="#"
+				ONMOUSEOVER="changeImages('contact', 'images/contact-over.gif'); return true;"
+				ONMOUSEOUT="changeImages('contact', 'images/contact.gif'); return true;">
+				<IMG NAME="contact" SRC="images/contact.gif" WIDTH=137 HEIGHT=32 BORDER=0 ALT=""></A></TD>
+		<TD COLSPAN=3>
+			<IMG SRC="images/menur.gif" WIDTH=53 HEIGHT=32 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=32 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=16>
+			<IMG SRC="images/index_09.gif" WIDTH=775 HEIGHT=22 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=22 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=5>
+			<IMG SRC="images/search1.gif" WIDTH=246 HEIGHT=39 ALT=""></TD>
+		<TD COLSPAN=3 align="center" valign="middle" background="images/b-search.gif">			
+		  <input name="textfield" type="text" size="18">
+	    </TD>
+		<TD COLSPAN=8>
+			<IMG SRC="images/search2.gif" ALT="" WIDTH=410 HEIGHT=39 border="0" usemap="#Map"></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=39 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=16>
+			<IMG SRC="images/draw.gif" WIDTH=775 HEIGHT=23 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=23 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD ROWSPAN=11>
+			<IMG SRC="images/w-left.gif" WIDTH=35 HEIGHT=362 ALT=""></TD>
+		<TD COLSPAN=5>
+			<IMG SRC="images/news1.gif" WIDTH=234 HEIGHT=34 ALT=""></TD>
+		<TD COLSPAN=4 ROWSPAN=11>
+			<IMG SRC="images/phone.gif" WIDTH=248 HEIGHT=362 ALT=""></TD>
+		<TD ROWSPAN=11>
+			<IMG SRC="images/profile1.gif" WIDTH=32 HEIGHT=362 ALT=""></TD>
+		<TD COLSPAN=4 ROWSPAN=3>
+			<IMG SRC="images/profile2.gif" WIDTH=224 HEIGHT=102 ALT=""></TD>
+		<TD ROWSPAN=3>
+			<IMG SRC="images/index_19.gif" WIDTH=2 HEIGHT=102 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=34 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=3 align="left" valign="top" background="images/b-news.gif">			Lorem ipsum dolor sit amet, <span class="text1">consetetur</span> sadi pscing elitr, sed diam nonumy <span class="text1">eirmod</span> tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</TD>
+		<TD COLSPAN=2 ROWSPAN=3>
+			<IMG SRC="images/news2.gif" ALT="" WIDTH=34 HEIGHT=81 border="0" usemap="#Map2"></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=63 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=3 ROWSPAN=2>
+			<IMG SRC="images/news3.gif" WIDTH=200 HEIGHT=18 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=5 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=3 ROWSPAN=6 align="left" valign="top" background="images/b-profile.gif">			<span class="text1">Lorem</span> ipsum dolor sit amet, consetetur sadi pscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et <span class="text1">accusam</span> et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.  Lorem ipsum dolor sit amet, consetetur <span class="text1">sadipscing</span> elitr, sed diam nonumy eirmod tempor. Lorem ipsum dolor sit amet, consetetur sadi pscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore <span class="text1">magna</span> <span class="text1">aliquyam</span> erat, sed diam voluptua.<br>
+	    Stet clita kasd gubergren.</TD>
+		<TD COLSPAN=2 ROWSPAN=6>
+			<IMG SRC="images/profile3.gif" WIDTH=24 HEIGHT=221 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=13 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=5>
+			<IMG SRC="images/partners1.gif" WIDTH=234 HEIGHT=42 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=42 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=3 align="left" valign="top" background="images/b-partners.gif">			Lorem ipsum dolor sit amet, consetetur sadi <span class="text1">pscing</span> elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna <span class="text1">aliquyam</span> erat, sed diam voluptua.</TD>
+		<TD COLSPAN=2 ROWSPAN=2>
+			<IMG SRC="images/partners2.gif" ALT="" WIDTH=34 HEIGHT=80 border="0" usemap="#Map3"></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=62 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=3>
+			<IMG SRC="images/partners3.gif" WIDTH=200 HEIGHT=18 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=18 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=5>
+			<IMG SRC="images/develop1.gif" WIDTH=234 HEIGHT=43 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=43 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=3 ROWSPAN=2 align="left" valign="top" background="images/b-develop.gif">			Lorem ipsum dolor sit <span class="text1">amet</span>, consetetur sadi pscing elitr, sed diam nonumy eirmod tempor <span class="text1">invidunt</span> ut labore et dolore magna aliquyam erat, sed diam <span class="text1">voluptua</span>.</TD>
+		<TD COLSPAN=2 ROWSPAN=3>
+			<IMG SRC="images/develop2.gif" ALT="" WIDTH=34 HEIGHT=82 border="0" usemap="#Map4"></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=43 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=5 ROWSPAN=2>
+			<IMG SRC="images/profile4.gif" ALT="" WIDTH=226 HEIGHT=39 border="0" usemap="#Map5"></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=19 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=3>
+			<IMG SRC="images/develop3.gif" WIDTH=200 HEIGHT=20 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=20 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD COLSPAN=16>
+			<IMG SRC="images/footer.gif" WIDTH=775 HEIGHT=60 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=60 ALT=""></TD>
+	</TR>
+	<TR>
+		
+      <TD COLSPAN=16 align="center" valign="middle" class="text1"> <a href="#">Home</a> 
+        | <a href="#">Company</a> | <a href="#">Products</a> | <a href="#">News</a> 
+        | <a href="#">Support</a> | <a href="#">Careers</a> | <a href="#">Contact 
+        Us</a> 
+        </TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=1 HEIGHT=62 ALT=""></TD>
+	</TR>
+	<TR>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=35 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=10 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=132 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=58 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=11 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=23 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=44 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=52 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=84 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=68 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=32 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=36 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=137 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=29 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=22 HEIGHT=1 ALT=""></TD>
+		<TD>
+			<IMG SRC="images/spacer.gif" WIDTH=2 HEIGHT=1 ALT=""></TD>
+		<TD></TD>
+	</TR>
+</TABLE>
+<!-- End ImageReady Slices -->
+<map name="Map">
+  <area shape="rect" coords="4,5,43,34" href="#" alt="submit">
+</map>
+<map name="Map2">
+  <area shape="rect" coords="8,57,24,74" href="#" alt="read more">
+</map>
+<map name="Map3">
+  <area shape="rect" coords="6,53,24,71" href="#" alt="read more">
+</map>
+<map name="Map4">
+  <area shape="rect" coords="4,50,26,72" href="#" alt="read more">
+</map>
+<map name="Map5">
+  <area shape="rect" coords="184,5,206,24" href="#" alt="read more">
+</map>
+</center></BODY>
+
+</HTML>
